--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@repo/db": "*",
-    "@repo/ui": "*",
     "@repo/store": "*",
+    "@repo/ui": "*",
+    "bcrypt": "^5.1.1",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
