--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,16 +10,16 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Clone the repository
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Login to docker hub
-              uses: docker/login-actions@v1
+              uses: docker/login-action@v1
               with:
                 username: ${{secrets.DOCKER_USERNAME}}
                 password: ${{secrets.DOCKER_PASSWORD}}
 
             - name: Build and push docker image
-              uses: docker/build-push-actions@v2
+              uses: docker/build-push-action@v2
               with:
                 context: .
                 file: ./docker/Dockerfile.user
